# drone-platform

./: README.md  docker-compose.yml  go.mod  go.sum  sqlc.yaml
cmd/api/: access.go  main.go  routes.go
cmd/consumer-worker/: main.go  process.go
cmd/ingestion-gateway/: main.go  producer.go  routes.go
cmd/shared/: kafka-config.go  server-defaults.go
cmd/shared/models/: events.go  gps.go  state.go
internal/platform/db/queries/: events.sql  gps.sql  joins.sql  state.sql
internal/platform/db/schema/: schema.sql
internal/platform/db/sqlc/: events.sql.go  gps.sql.go  joins.sql.go  models.go  state.sql.go
migrations/: 000002_create_gps.down.sql  000002_create_gps.up.sql  000003_create_state.up.sql  000004_create_events.up.sql  000005_add_index_on_time.down.sql  000005_add_index_on_time.up.sql
scripts/drone-simulator/: README.md  drone.py  drone_ids.csv  factory.py  generate_ids.py  ids.py  main.py  payloads.py  pyproject.toml  runner.py
